header overlapping issue (#420)
* header overlapping issue

* Go Back to Home Page top spacing

--- a/static/css/_detail-page.scss
+++ b/static/css/_detail-page.scss
@@ -13,7 +13,7 @@
     @media (min-width: 769px) {
       position: -webkit-sticky;
       position: sticky;
-      top: 148px;
+      top: 124px;
     }
     @media (max-width: 768px) {
       max-width: 100%;
@@ -501,4 +501,7 @@ body ::-webkit-scrollbar-track {
       margin-right: 12px;
     }
   }
+}
+#try-me-out-3 ~ p ~ p {
+  margin-top: 24px;
 }
